# condor-eye-backend

./: .gitignore  AGENTS.md  README.md
.atl/: .skill-registry.cache.json  skill-registry.md
ai-python/: __init__.py  main.py  pyproject.toml
ai-python/datasets/: core.py
ai-python/evaluation/: __init__.py  core.py
ai-python/inference/: __init__.py  alerts.py  core.py
ai-python/models/: __init__.py
ai-python/notebooks/: __init__.py
ai-python/training/: __init__.py  core.py
comms-rust/: Cargo.toml
comms-rust/gateway/: Cargo.toml
comms-rust/gateway/src/: lib.rs  main.rs
comms-rust/integration/: Cargo.toml
comms-rust/integration/src/: lib.rs
comms-rust/telemetry/: Cargo.toml
comms-rust/telemetry/src/: lib.rs
comms-rust/tests/: integration_tests.rs
comms-rust/video/: Cargo.toml
comms-rust/video/src/: lib.rs
docker/: docker-compose.yml
docs/: architecture.md  context.md  roadmap.md  tech-stack.md
