[project]
name = "condor-eye-ai"
version = "0.1.0"
description = "Condor Eye - AI/Computer Vision pipeline (Fase 0 MVP)"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "ultralytics",
    "opencv-python",
    "numpy",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "label-studio",
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
